# salt-aws-extension

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: test.yml
.pre-commit-hooks/: check-cli-examples.py
docs/: conf.py  index.rst
src/saltext/aws/modules/: aws_sqs.py  boto3_elasticache.py  boto3_elasticsearch.py  boto3_route53.py  boto3_s3.py  boto3_sns.py  boto_apigateway.py  boto_asg.py  boto_cfn.py  boto_cloudfront.py  boto_cloudtrail.py  boto_cloudwatch.py  boto_cloudwatch_event.py  boto_cognitoidentity.py  boto_datapipeline.py  boto_dynamodb.py  boto_ec2.py  boto_efs.py  boto_elasticache.py  boto_elasticsearch_domain.py  boto_elb.py  boto_elbv2.py  boto_iam.py  boto_iot.py  boto_kinesis.py  boto_kms.py  boto_lambda.py  boto_rds.py  boto_route53.py  boto_s3.py  boto_s3_bucket.py  boto_secgroup.py  boto_sns.py  boto_sqs.py  boto_vpc.py
src/saltext/aws/states/: boto3_elasticache.py  boto3_elasticsearch.py  boto3_route53.py  boto3_s3.py  boto3_sns.py  boto_asg.py  (+29 more)
tests/: conftest.py
tests/unit/modules/: test_boto3_elasticsearch.py  test_boto_apigateway.py  test_boto_cloudtrail.py  test_boto_cloudwatch_event.py  test_boto_cognitoidentity.py  test_boto_elasticsearch_domain.py  test_boto_elb.py  test_boto_elbv2.py  test_boto_iot.py  test_boto_lambda.py  test_boto_route53.py  test_boto_s3_bucket.py  test_boto_secgroup.py  test_boto_ssm.py  test_boto_vpc.py
tests/unit/states/: test_boto_apigateway.py  test_boto_asg.py  test_boto_cloudfront.py  test_boto_cloudtrail.py  test_boto_cloudwatch_alarm.py  test_boto_cloudwatch_event.py  test_boto_cognitoidentity.py  test_boto_dynamodb.py  test_boto_ec2.py  test_boto_elasticache.py  test_boto_elasticsearch_domain.py  test_boto_elb.py  test_boto_iam_role.py  test_boto_iot.py  test_boto_kinesis.py  test_boto_lambda.py  test_boto_lc.py  test_boto_route53.py  test_boto_s3_bucket.py  test_boto_secgroup.py  test_boto_sns.py  test_boto_sqs.py  test_boto_vpc.py
tests/unit/utils/: test_botomod.py
(+3 files in other folders)
